manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-server-ingress
#  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
 ingressClassName: internal-alb
 rules:
 - host: "*.eu-west-1.elb.amazonaws.com"
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: argocd-server
           port:
             name: https
#  tls:
#  - hosts:
#    - argocd.azure.bnl-ms.myengie.com
#    secretName: argocd-server-tls
